--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <ul>
         <li>Orientation — Wed 10:00–12:00</li>
         <li>Git Workshop — Fri 14:00–16:00</li>
+        <li>Lynn Workshop — Sat 15:00–17:00</li>
       </ul>
     </section>
     <section id="contact" aria-labelledby="contact-title">
